k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apis-services
  labels:
    name: apis-services
