k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-app-mysql
  labels:
    app: registration-app
spec:
  selector:
    matchLabels:
      app: registration-app
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registration-app
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
